--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@
     font-size: 25px;
     color: #FFFFFF66;
     border-radius: 1.5vh;
-    width: 25%;
+    width: 50%;
     border-color: black;
     padding:0.5vh;
     margin-top:1vh;
@@ -130,4 +130,11 @@
   font-size: 18px;
   width:25%;
   border-radius:1.5vh;
+}
+
+.card
+{
+  background-color:#484444;
+  color:white;
+  border-radius: 1.5vh;
 }
