--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .navbar-dark
 {
@@ -97,6 +59,12 @@
   margin-left:50px;
 }
 
+@media screen and (max-width: 750px) {
+  .heading-2
+  {
+    margin-left:0px;
+  }
+}
 .search_field .input
 {
   font-size: 25px;
@@ -154,3 +122,4 @@
   width:25%;
   border-radius:1.5vh;
 }
+
