--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@
 .welcome
 {
   color: white;
+  font-weight: 750 !important;
 }
 
 #TypeWriter
@@ -101,6 +102,8 @@
   width:80%;
 }
 }
+
+/* Restaurant and Notes  */
 .search_field .input
 {
   font-size: 25px;
@@ -157,5 +160,71 @@
   font-size: 18px;
   width:25%;
   border-radius:1.5vh;
+}
+
+/* Contact Us */
+
+
+.contact-form{
+  background:  transparent linear-gradient(117deg, #141c1c 1.5%, #2c2c2e 19%, #1c1c21 73%, #141c1c 100%) 0% 0% no-repeat padding-box;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 70%;
+  border-radius: 1.5rem;
+}
+
+.contact-form h3
+{
+  font-family: Montserrat;
+  font-weight: bold;
+}
+.contact-form .form-control{
+  border-radius:1rem;
+  width:100%;
+  background:#484444;
+  border-color:#484444;
+  color:white;
+}
+.contact-image{
+  text-align: center;
+}
+.contact-image img{
+  border-radius: 6rem;
+  width: 11%;
+  margin-top: -3%;
+ }
+.contact-form form{
+  padding: 14%;
+}
+.contact-form form .row{
+  margin-bottom: -7%;
+}
+.contact-form h3{
+  margin-bottom: 8%;
+  margin-top: -10%;
+  text-align: center;
+  color: #6C63FF;
+}
+.contact-form .btnContact {
+  width: 80%;
+  border: none;
+  border-radius: 1rem;
+  padding: 1.5%;
+  background: #6C63FF;
+  font-weight: 600;
+  color: black;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.btnContactSubmit
+{
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #fff;
+  background-color: #0062cc;
+  border: none;
+  cursor: pointer;
 }
 
