--- a/src/App.css
+++ b/src/App.css
@@ -90,17 +90,18 @@
   font-size: 50px;
   margin-left:50px;
 }
-
 @media screen and (max-width: 750px) {
   .heading-2
   {
     margin-left:0px;
   }
-  .btn-outline-light
-{
-  
-  width:80%;
 }
+@media screen and (max-width: 1250px) {
+  .btn-outline-light
+  {
+    
+    width:80%;
+  }
 }
 
 /* Restaurant and Notes  */
